[gd_scene load_steps=4 format=2]

[ext_resource path="res://assests/slime_bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/slime_bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 512.0

[node name="slime_bullet" type="Area2D"]
scale = Vector2( 0.044, 0.044 )
z_index = -2
script = ExtResource( 2 )

[node name="SlimeBullet" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_slime_bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
